--- a/project-root/frontend/package.json
+++ b/project-root/frontend/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lucide-react": "^0.556.0",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-router-dom": "^7.10.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
